<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/paBiBack"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/ca_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />


    <EditText
        android:id="@+id/editnumber"
        android:layout_width="358dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkReverse"
        android:layout_width="349dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/pa_reverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editnumber" />

    <Button
        android:id="@+id/bPrimeAnalyze"
        android:layout_width="359dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:text="@string/pa_b_analyze"
        app:layout_constraintBottom_toTopOf="@+id/infoResultPrime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkReverse"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/infoResultPrime"
        android:layout_width="370dp"
        android:layout_height="268dp"
        android:layout_marginBottom="136dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:text="@string/ca_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="359dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/pa_text_enter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>