<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.circle.CircleFragment"
>

    <ImageButton
        android:id="@+id/biBack"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/ca_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textCirclePresent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ca_text_pres1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textCirclePresent2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/textCirclePresent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ca_text_pres2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textCirclePresent1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/editxc1"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editxc2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCirclePresent1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edityc1"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edityc2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxc1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editrc1"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editrc2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edityc1"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textX1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/ca_x"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editxc1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCirclePresent1" />

    <TextView
        android:id="@+id/textY1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/ca_y"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edityc1"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textX1" />

    <TextView
        android:id="@+id/textR1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/ca_r"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editrc1"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textY1" />

    <EditText
        android:id="@+id/editxc2"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCirclePresent2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edityc2"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxc2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editrc2"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/ca_empty"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edityc2"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bCircleAnalyze"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/blue"
        android:text="@string/ca_button_analyze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bCreateGraph"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editrc2"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/infoResult"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/ca_info"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCircleAnalyze"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/bCreateGraph"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/purple"
        android:text="@string/ca_button_graphic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bCircleAnalyze"
        app:layout_constraintTop_toBottomOf="@+id/editrc2"
        app:layout_constraintVertical_bias="0.082" />


</androidx.constraintlayout.widget.ConstraintLayout>